<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Login</string>
    <string name="login_fingerprint">Masuk dengan Fingerprint</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="enter">Masuk</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="login_with_facebook">Masuk dengan Facebook</string>
    <string name="invalid_username_or_password">Silahkan cek kembali username dan password Anda</string>
</resources>