<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:navigationIcon="@drawable/ic_arrow_back">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/enter"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_login_button"
                style="@style/Widget.Stockbit.DefaultOutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                android:text="@string/login_with_google"
                app:icon="@drawable/logo_google"
                app:iconSize="20dp"
                app:iconTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/facebook_login_button"
                style="@style/Widget.Stockbit.DefaultOutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:text="@string/login_with_facebook"
                app:icon="@drawable/logo_facebook"
                app:iconSize="20dp"
                app:iconTint="@null" />

            <FrameLayout
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_8"
                android:layout_marginVertical="@dimen/space_16">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/colorLighterGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/white"
                    android:paddingHorizontal="@dimen/space_16"
                    android:paddingVertical="@dimen/space_8"
                    android:text="Atau"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/colorLightGray" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username_email_edit_text"
                style="@style/Widget.Stockbit.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:hint="@string/username_or_email"
                android:inputType="textEmailAddress" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password_edit_text"
                    style="@style/Widget.Stockbit.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/password_visibility_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/space_8"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/space_8"
                    android:src="@drawable/ic_visibility_off"
                    app:tint="@color/colorLightGray" />
            </FrameLayout>

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/Widget.Stockbit.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_20"
                android:elevation="0dp"
                android:text="@string/login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_fingerprint_button"
                style="@style/Widget.Stockbit.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:text="@string/login_fingerprint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_16"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Belum punya akun? "
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Daftar sekarang"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="?attr/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>